objects/Capacities__c.object
<CustomObject><fields>
        <fullName>Capacity_Level_CapacityObject__c</fullName>
        <label>Capacity Level</label>
        <picklist>
            <picklistValues>
                <fullName>Highly Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Effective</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Access</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Capacity_Type__c</fullName>
        <label>Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capacity to Implement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage with External Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Return on Investment</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Feedback_Form_Record__c</fullName>
        <description>This field serves as a lookup to the Document Review Feedback Form record that the Capacity record is related to.</description>
        <label>Feedback Form Record</label>
        <referenceTo>Document_Review_Feedback_Form__c</referenceTo>
        <relationshipLabel>Capacities</relationshipLabel>
        <relationshipName>Capacities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feedback Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Visit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>false</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Capacity</label><nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Capacities Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Capacities</pluralLabel><sharingModel>ControlledByParent</sharingModel><recordTypes>
        <fullName>Capacities_Standard_Layout</fullName>
        <active>true</active>
        <label>Capacities Standard Layout</label>
    </recordTypes></CustomObject>